Test/errors/err_field_to_field_copy.cb
// Field-to-field copy of an owning value (`obj.s = obj2.s`) shallow-aliases obj2's backing
// buffer into obj's field, which is then freed twice at teardown -> heap corruption. For
// `string` this cannot be auto-resolved (ownership is a RUNTIME property - the _len owned
// bit - so the compiler can neither safely deep-copy a possibly-borrowed source nor move a
// source the caller may keep using), so it is rejected with a steer to '.copy()' or 'move'.
// (Non-string owning types are rejected by the separate X4 guard; see
// err_container_copy_into_field.cb.)
import "string.cb";

struct Row { string name = default; };

extern int main()
{
    Row a = default;
    Row b = default;
    // Both sides are `string` struct fields -> field-to-field alias. Use a.name.copy() for an
    // independent value or `move a.name` to transfer ownership.
    expect_error("field-to-field copy of owning value 'string'");
    b.name = a.name;
}
